<resources>
    <string name="app_name">Speedrun.com Browser</string>
    <string name="title_game_detail">View Game Leaderboards</string>
    <string name="enter_game_name">Search  for anything&#8230;</string>
    <string name="enter_genre_filter">Filter by genre&#8230;</string>
    <string name="label_key_platforms">Platforms</string>
    <string name="empty" />
    <string name="error_missing_game">Error: Game not Found: %1$s</string>
    <string name="error_missing_leaderboard">Error: Leaderboard not Found: %1$s</string>
    <string name="error_missing_run">Error: Run not Found: %1$s</string>
    <string name="button_view_rules">View Rules</string>
    <string name="msg_no_rules_content">No rules were provided for this category.</string>
    <string name="title_run_detail">View Speedrun</string>
    <string name="desc_game_cover">Game Cover ARt</string>
    <string name="desc_game_background">Game Background Art</string>
    <string name="msg_cannot_play_video">Sorry, this video cannot currently be played inside the app.</string>
    <string name="btn_open_browser">Open in Browser</string>
    <string name="title_activity_about">About</string>
    <string name="label_about_subtitle">Unofficial Android Browser</string>
    <string name="label_about_author">Developed by Daniel Beal (klbyte)</string>
    <string name="label_about_author2">Data provided by Speedrun.com</string>
    <string name="label_about_speedrun_legal">
        Official Speedrun.com Legal:\n
        Original content provided on the site is licensed under Creative Commons Attribution-NonCommercial 4.0 International.
        Content uploaded by users, such as game cover images, are copyright of their respective owners;
        the same applies to content that is linked to, like YouTube videos and external images or documents.\n
        \n
        Apps whose core functionality is directly related to the site may use the domain name (speedrun.com)
        in their name, as long as it\'s not the sole name, and the app adheres to the license applicable to the
        content it uses. Either the app name or the description must explicitly state that the app is unofficial.
    </string>
    <string name="label_about_os_licenses">View Open Source Licenses</string>
    <string name="menu_about">About</string>
    <string name="error_could_not_connect">Connection error with server! Check your internet connection and try again later.</string>
    <string name="error_twitch">Could not load twitch player! Please try again later.</string>
    <string name="error_twitch_app">Could not load twitch app! Is it installed?</string>
    <string name="button_filters">Filters</string>
    <string name="button_filters_used">Filters &#9733;</string>
    <string name="dialog_title_choose_filters">Filter runs by:</string>
    <string name="dialog_title_choose_genres">Show games/runs by genre:</string>
    <string name="empty_no_splits">Splits are coming soon!</string>
    <string name="empty_no_runs">No runs here (its free!)</string>
    <string name="msg_no_video">This run does not have a video.</string>
    <string name="error_invalod_url">Invalid URL: %s</string>
    <string name="label_game_search">Games</string>
    <string name="label_player_search">Players</string>
    <string name="label_personal_bests">Personal Bests</string>
    <string name="label_you_can_click">Select a run to watch:</string>
    <string name="error_cannot_play_video">Something went wrong running the player.</string>
    <string name="missing_watch_history">Runs will appear here as you watch them.</string>
    <string name="menu_history">Watch History</string>
    <string name="title_activity_history">Watch History</string>
    <string name="title_loading">Loading&#8230;</string>
    <string name="menu_subscribe">Subscribe</string>
    <string name="menu_unsubscribe">Unsubscribe</string>
    <string name="success_subscription">Notification settings updated!</string>
    <string name="default_notification_channel_id">default</string>
    <string name="notification_channel_title">Subscribed Players/Games</string>
    <string name="notify_title_player_record">PB: %1s in %2s</string>
    <string name="notify_msg_player_record">%1s &#x2022; %2s in %3s</string>
    <string name="notify_title_game_record">WR: %1s from %2s</string>
    <string name="notify_msg_game_record">%1s &#x2022; %2s in %3s</string>
    <string name="button_got_it">Got it!</string>
    <string name="dialog_title_release_notes">Welcome to Speedrun Browser (Unofficial)!</string>
    <string name="dialog_msg_first_run">
        Thanks for downloading the app and giving it a try!\n
        \n
        Here are some useful tips while using the app:\n
        * If you select a Speedrun to watch, your progress is automatically recorded. Feel free
        to leave and come back later!\n
        * Filters can be used on any leaderboard. Your filter options are saved for next time.\n
        * You can subscribe to categories and players to be notified of a new PB/WR.\n
        * Charts are available for the site, games, categories/levels, and players. Just click the graph icon.\n
        * Want to watch speedruns on your TV? This app is available for Android TV or Amazon Fire TV (currently in beta).\n
        \n
        This project started in March 2019 out of my distaste for viewing the Speedrun.com website directly from
        a phone. While the site is mobile friendly, it lacks some useful features normally found on
        smartphones. I continue to supply bugfixes and new features for this app almost every month.\n
        \n
        If you like the app, please consider supporting my motivation by sharing or rating.
    </string>
    <string name="dialog_msg_release_notes">
        Thanks for downloading the app!\n
        \n
        Are you a moderator? This app now has minimal functionality for approving and rejecting runs
        for games which you are a moderator for. Click "Settings" on the top right and enter your
        API to get started!\n
        \n
        It has been exciting to see the app continue to grow these past few months. I wish I could
        create a chat group for continued support of the project, but so far no good options have
        been available. Perhaps in the future a channel on the Speedrun.com discord server could
        be attained, but for now if you need support, please open a ticket on GitHub (link on "About"
        page) or submit a review on the play store.
    </string>
    <string name="dialog_button_rate_now">Rate now!</string>
    <string name="label_about_privacy_policy">Privacy Policy</string>
    <string name="label_about_terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_subscribed_games">Subscribed Games</string>
    <string name="title_tab_popular_games">Popular Games</string>
    <string name="title_tab_players">Players</string>
    <string name="title_tab_subscribed_players">Subscribed Players</string>
    <string name="title_tab_games">Games</string>
    <string name="empty_no_players">No players to show! Type into the search box to find a player by name.</string>
    <string name="empty_no_games">No games found.</string>
    <string name="title_tab_latest_runs">Latest Runs</string>
    <string name="transition_feature_img">featureImg</string>
    <string name="title_tab_recently_watched">Recently Watched</string>
    <string name="error_could_not_find">Could not find data: %1$s</string>
    <string name="title_item_detail">Speedrun.com Browser (Unofficial)</string>
    <string name="dialog_msg_choose_categories">Select categories/levels you want to receive notifications for new records. Choose "Select None" to unsubscribe.</string>
    <string name="button_select_all">Select All</string>
    <string name="button_select_none">Select None</string>
    <string name="button_save">Save</string>
    <string name="render_level_category">%1$s &#x2022; %2$s</string>
    <string name="label_filter_platform">Platform</string>
    <string name="label_filter_region">Region</string>
    <string name="menu_genres">Genres</string>
    <string name="label_all_genres">All Genres</string>
    <string name="button_view_on_official">View on Official Player</string>
    <string name="msg_share_run">Speedrun by %s in %s, %s %s</string>
    <string name="msg_share_run_explain">Share Run</string>
    <string name="label_about_rate_this">Rate this app!</string>
    <string name="label_about_complain">Report a Problem</string>
    <string name="dialog_title_send_email">Report a Problem</string>
    <string name="dialog_msg_send_email">
        I do my best to track, monitor, and resolve crashes and other app misbehavior as are observable via
        analytics. However, I have had a lot of difficulty resolving some issues reported on the Play Store
        because I have not been able to open a line of communication or receive more specific details of the
        issue.\n
        \n
        In order to resolve this, this project uses GitHub Issues to track problems and communicate issues.
        To submit an issue, you must have a GitHub account.\n
        \n
        If you choose to submit an issue, the process would be made easier if you include:\n
        \n
        * Screenshots of issues and pages around the issue, when applicable\n
        * A detailed overview of your session, including which games, players, and runs you may have viewed
    </string>
    <string name="dialog_button_send_email">Open GitHub</string>
    <string name="chart_title_volume">Submission Volume</string>
    <string name="chart_desc_volume">Number of runs submitted in a time period. A potential signal of new skips or popularity level.</string>
    <string name="menu_charts_and_statistics">Charts and Stats</string>
    <string name="title_game_stats">Game Statistics</string>
    <string name="chart_legend_volume">PBs Submitted</string>
    <string name="chart_title_wrs">World Record Progression</string>
    <string name="chart_desc_wrs">Tap on a list item while selected to view the run!\n
        \n
        Game completion time by world records over time. Plotted by each subcategory on the same line.</string>
    <string name="title_leaderboard_stats">Leaderboard Statistics</string>
    <string name="button_view_leaderboard_info">View Rules/Stats</string>
    <string name="chart_title_distribution">PB Distribution</string>
    <string name="chart_desc_distribution">
        Plots all leaderboard runs on a single chart.

        This chart gives a wholistic view on what a "typical" skilled time might look like what separates
        the seasoned runners from newbies.
    </string>
    <string name="chart_title_favorite_games">Favorite Games</string>
    <string name="chart_desc_favorite_games">The number of PBs this player has submitted for each game, displayed as a Pie wheel.</string>
    <string name="chart_title_count_over_time">Total PB Records</string>
    <string name="chart_desc_count_over_time">The number of verified runs recorded on the site over time.</string>
    <string name="prelude_rules">**Rules:**\n\n %s</string>
    <string name="title_site_statistics">Speedrun.com Site Statistics</string>
    <string name="title_player_stats">Player Statistics</string>
    <string name="try_website">Load this on the website</string>
    <string name="button_main_page">App Main Page</string>
    <string name="error_not_loadable">Could not load this URL. It may not be supported by the app.</string>
    <string name="menu_view_website">View On Website</string>
    <string name="label_about_share_this">Share this app!</string>
    <string name="label_about_source_code">View Source Code</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_moderation">Do Moderation</string>
</resources>