<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_moderation"
        android:icon="@drawable/baseline_gavel_24"
        app:actionLayout="@layout/menu_moderation"
        android:title="@string/menu_moderation"
        android:visible="false"
        app:showAsAction="always" />

    <item android:id="@+id/menu_site_stats"
        android:icon="@drawable/baseline_insert_chart_24"
        android:title="@string/menu_charts_and_statistics"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_about"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/menu_about"
        app:showAsAction="ifRoom" />
</menu>