<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail_container"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_not_loadable"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonTryWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_website" />

        <Button
            android:id="@+id/buttonMainPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_main_page" />

    </LinearLayout>

</FrameLayout>