<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".AboutActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/linkSpeedrunComTrophy"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/speedrun_com_trophy" />

            <ImageView
                android:id="@+id/linkSpeedrunComWebsite"
                android:layout_marginTop="-20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/speedrun_com_logo" />

            <TextView
                android:id="@+id/txtAppTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/label_about_subtitle"
                android:textAlignment="center"
                android:typeface="monospace"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/label_about_author"
                android:textAlignment="center"
                android:typeface="monospace"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_about_author2"
                android:textAlignment="center"
                android:typeface="monospace"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/label_about_speedrun_legal"
                android:textAlignment="center"
                android:typeface="monospace"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/linkRateThis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingTop="@dimen/half_fab_margin"
                android:paddingBottom="@dimen/half_fab_margin"
                android:text="@string/label_about_rate_this"
                android:textAlignment="center"
                android:typeface="monospace"
                android:textStyle="bold"
                android:textColor="@color/colorLinkText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/linkShareThis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingTop="@dimen/half_fab_margin"
                android:paddingBottom="@dimen/half_fab_margin"
                android:text="@string/label_about_share_this"
                android:textAlignment="center"
                android:typeface="monospace"
                android:textStyle="bold"
                android:textColor="@color/colorLinkText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/linkSourceCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingTop="@dimen/half_fab_margin"
                android:paddingBottom="@dimen/half_fab_margin"
                android:text="@string/label_about_source_code"
                android:textAlignment="center"
                android:typeface="monospace"
                android:textStyle="bold"
                android:textColor="@color/colorLinkText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/linkComplain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingTop="@dimen/half_fab_margin"
                android:paddingBottom="@dimen/half_fab_margin"
                android:text="@string/label_about_complain"
                android:textAlignment="center"
                android:typeface="monospace"
                android:textStyle="bold"
                android:textColor="@color/colorLinkText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/linkTermsAndConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingTop="@dimen/half_fab_margin"
                android:paddingBottom="@dimen/half_fab_margin"
                android:text="@string/label_about_terms_and_conditions"
                android:textAlignment="center"
                android:typeface="monospace"
                android:textStyle="bold"
                android:textColor="@color/colorLinkText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/linkPrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingTop="@dimen/half_fab_margin"
                android:paddingBottom="@dimen/half_fab_margin"
                android:text="@string/label_about_privacy_policy"
                android:textAlignment="center"
                android:typeface="monospace"
                android:textStyle="bold"
                android:textColor="@color/colorLinkText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/linkOpenSourceLicenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:paddingTop="@dimen/half_fab_margin"
                android:paddingBottom="@dimen/half_fab_margin"
                android:text="@string/label_about_os_licenses"
                android:textAlignment="center"
                android:typeface="monospace"
                android:textStyle="bold"
                android:textColor="@color/colorLinkText"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>