<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="@dimen/half_fab_margin"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/dialog_msg_choose_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_margin="@dimen/half_fab_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSelectAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_select_all"/>

        <Button
            android:id="@+id/btnSelectNone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_select_none" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/layoutListCategory"
            android:layout_marginTop="@dimen/half_fab_margin"
            android:layout_marginBottom="@dimen/half_fab_margin"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Any%"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100%"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                android:checked="true"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_margin="@dimen/half_fab_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSave"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"/>

    </LinearLayout>

</LinearLayout>